add report on master

--- a/3-PowerFactory/Group E Assignment 3 Report.ipynb
+++ b/3-PowerFactory/Group E Assignment 3 Report.ipynb
@@ -18,9 +18,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: justify\">\n",
     "DIgSILENT stands for \"__DI__gital __SI__mu__L__ation of __E__lectrical __N__e__T__works\", a software and consulting company providing engineering services in the field of electrical power systems for transmission, distribution, generation and industrial plants. PowerFactory is one of their software product which has ability to analyze transmission, distribution, and industrial electrical power systems. The main objective of this tool is to help planning and operation optimisation. In this exercise we are working with Medium Voltage distribution system structure  to implement configuration checking, planning, and optimising.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "PowerFactory have API that can have interface with python script by using “powerfactory” module. This solution enables a Python script to have access to a comprehensive range of data available in PowerFactory, including all objects, attributes, commands, and functions. To gain access to the PowerFactory environment the command GetApplication() must be added."
+    "<div style=\"text-align: justify\">\n",
+    "PowerFactory have API that can have interface with python script by using “powerfactory” module. This solution enables a Python script to have access to a comprehensive range of data available in PowerFactory, including all objects, attributes, commands, and functions. To gain access to the PowerFactory environment the command GetApplication() must be added.\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -38,15 +49,30 @@
     "collapsed": true
    },
    "source": [
+    "<div style=\"text-align: justify\">\n",
     "In this assignment we need ImageMagick, free software to create, edit, and compose bitmap images. This feature used to create grid and geolocation visualization.\n",
-    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: justify\">\n",
     "From PowerFactory objects required are:\n",
+    "</div>\n",
     "1. Load flow calculation settings stored in Class _ComLDf_.\n",
     "2. Study cases have a study time which defines the point in time the user wishes to analyse.\n",
-    "3. Object line element (_ElmLne_), transformer substation (_ElmTrfstat_), and feeder (_ElmFeeder_). A feeder is defined at a line or transformer end, and then the feeder definition algorithm searches the\n",
-    "system from the definition point to determine the extent of the feeder.\n",
-    "\n",
+    "3. Object line element (_ElmLne_), transformer substation (_ElmTrfstat_), and feeder (_ElmFeeder_). A feeder is defined at a line or transformer end, and then the feeder definition algorithm searches the system from the definition point to determine the extent of the feeder."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: justify\">\n",
     "From Python we need several libraries:\n",
+    "</div>\n",
     "1. pandas, a data structures and data analysis tools\n",
     "2. datetime and time, classes to manipulate date and time\n",
     "3. os, miscellaneous operating system interface\n",
@@ -65,7 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Radial network structure have characteristic of no closed loop and unique path among any pair nodes. To do radiality visual checking, we build incidence matrix to evaluate visually whether the network is radially operated or not."
+    "<div style=\"text-align: justify\">\n",
+    "Radial network structure have characteristic of no closed loop and unique path among any pair nodes. To do radiality visual checking, we build incidence matrix to evaluate visually whether the network is radially operated or not.\n",
+    "</div>"
    ]
   },
   {
@@ -176,6 +204,15 @@
    "metadata": {},
    "source": [
     "In case of a fault event or an intentional outage of an element of the grid, circuit breakers on both side of the line will interrupt until the fault is resolved or planned outage is over. Meanwhile, in the shortest possible time, the grid must be restored that could feed all transformers. In this scenario we switch line(4) off until the end of this exercise. Line(4) connects  20 kV Substation 4 with trafoSubstations 9 and 17. Hence we need to find a way around, e.g., by not disabling R8. We should also take into account line's length and its load. We took configurations from exercise 4 as a basis. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "</div>"
    ]
   },
   {
