--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -4,25 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Power Factory "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Group E  \n",
-    "\n",
-    "Project 3 Solution IPYNB"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "DIgSILENT stands for \"__DI__gital __SI__mu__L__ation of __E__lectrical __N__e__T__works\", a software and consulting company providing engineering services in the field of electrical power systems for transmission, distribution, generation and industrial plants. PowerFactory is one of their software product which has ability to analyze transmission, distribution, and industrial electrical power systems. The main objective of this tool is to help planning and operation optimisation. In this exercise we are working with Medium Voltage distribution system structure  to implement configuration checking, planning, and optimising.\n",
-    "\n",
-    "PowerFactory have API that can have interface with python script by using “powerfactory” module. This solution enables a Python script to have access to a comprehensive range of data available in PowerFactory, including all objects, attributes, commands, and functions. To gain access to the PowerFactory environment the command GetApplication() must be added."
+    "# Group E Solution: Power System Analysis with DigSILENT Power Factory "
    ]
   },
   {
@@ -70,14 +52,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2 --> Very little Documentation Dani"
+    "## Exercise 2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Necessary Classes"
+    "### Necessary Classes"
    ]
   },
   {
@@ -98,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get Objects"
+    "### Get Objects"
    ]
   },
   {
@@ -118,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example\n",
+    "### Example\n",
     "This is the code which should be executed after each time we change the configuration"
    ]
   },
@@ -130,7 +112,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "load_flow_class.Execute()"
    ]
   },
@@ -138,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3 --> Documentation Dani"
+    "## Exercise 3"
    ]
   },
   {
@@ -198,24 +179,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build Incidence Matrix\n",
-    "Here we are building the instance matrix manually.\n",
+    "### Build Incidence Matrix\n",
+    "Here we are building the instance matrix manually. Detail explanation can be found in our report.\n",
     "\n",
-    "The convention from the supplied example image is used:\n",
-    " - Branch number is the number of the corresponding node, which has the incoming connection. For example, 1 -> 2 means, 1 connects to 2, so the branch number is 2.\n",
-    " \n",
-    "Size of the matrix is 1 + 5 + 17 = 23. \n",
-    " - 1 stands for the root 63 kV station\n",
-    " - 5 for 20 kV substations\n",
-    " - 17 for the trafo substations.\n",
-    "\n",
-    "Here, we are configuring matrix as follows, first column is for the root node, next 5 columns are for the 20 kV substations and last 17 columns are for trafo substations.  \n",
-    "So when we are refering the first trafo substation, corresponding index is calculated as follows:\n",
-    "\n",
-    "1(root) + 5(20 kV stations) + 1(index we want) - 1(indexing starts from 0)\n",
-    "\n",
-    "\n",
-    "#### Indexes for the Trafo substations\n",
+    "### Indexes for the Trafo substations\n",
     "We need this correction, since ids of substations have gaps, so they are aligned for more compact incidence matrix.\n",
     "\n",
     "Trafo Substation(1) -> 1\n",
@@ -300,32 +267,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can understand whether this network is radial or not by checking the rows of this matrix. If there are 2 or more 1 s in a row, it means that there are 2 source nodes for the corresponding node. From this, we conclude that there are multiple paths to the same node, so the radiality is violated. Also if there is a closed loop, there has to be a 2 source nodes for a node. Only one exception to this is i.e 1(root)->2->3->1 , root node has an incoming node. In our case, this is impossible. So, whenever there is a closed loop in the network, there are at least 2 incoming nodes for one node.\n",
-    "\n",
-    "As an algorithm, we may find the row sums and if the sum is larger than 0(1 for source node, -1 for destination node) then there are 2 incoming nodes for that node. So the maximum value for the row sums should be 0.\n",
-    "\n",
-    "However, to understand the if the the problem with radiality or a closed loop, one has to investigate further, since this algorithm only checks if it is radial or not, does not give a clue about closed loops."
+    "## Exercise 4"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 4 --> Documentation Sasha"
+    "### Useful Functions Provided"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Useful Functions Provided"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Radiality Check"
+    "### Radiality Check"
    ]
   },
   {
@@ -361,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feeded Check"
+    "### Feeded Check"
    ]
   },
   {
@@ -397,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate Losses"
+    "### Calculate Losses"
    ]
   },
   {
@@ -416,19 +372,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Graphic Save\n",
+    "### Graphic Save\n",
     "\n",
     "This saves a graphic of grid and geolocation visualization. The name is given as input(figname) and the resulting images are under graphics/Exercise/RES"
    ]
@@ -512,9 +459,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Try different scenarios \n",
+    "### Try different scenarios \n",
     "\n",
-    "## 1) Write a function which tries out our defined scenarios and outputs respective network losses"
+    "Write a function which tries out our defined scenarios and outputs respective network losses"
    ]
   },
   {
@@ -565,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Scenarios"
+    "### Define Scenarios"
    ]
   },
   {
@@ -640,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 5 --> Documentation Ozgur"
+    "## Exercise 5"
    ]
   },
   {
@@ -671,31 +618,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example Graphics\n",
-    "\n",
-    "As we have proceeded with this exercise, we already created some graphics of a scenario.\n",
-    "\n",
-    "Here is an example scenario <b>grid</b> graphics for 4 AM 01.01.2015:\n",
-    "\n",
-    "<CENTER>\n",
-    "    <img  src=\"graphics\\Exercise\\Example\\exercise5_best_configuration_time_4-2018-05-28 00.52.10.png\"/>\n",
-    "<CENTER>\n",
-    "\n",
-    "\n",
-    "\n",
-    "Here is the <b>geographical</b> graphic for the same time period:\n",
-    "\n",
-    "\n",
-    "\n",
-    "<CENTER>\n",
-    "    <img  src=\"graphics\\Exercise\\Example\\exercise5_best_configuration_time_4-2018-05-28 00.52.10-geo.png\"/>\n",
-    "<CENTER>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Exercise 6"
    ]
   },
@@ -703,7 +625,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scenarios for exercise 6 (Line 4 is off by default) --> documentation Dani"
+    "Scenarios for exercise 6 is Line 4 is off by default."
    ]
   },
   {
