--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -687,7 +687,7 @@
    "source": [
     "best_scenario_6 = list(exercise6_results.items())[0]\n",
     "\n",
-    "set_scene(lines,scenarios_ex6[best_scenario_6[0]])\n",
+    "set_scene(lines,scenarios_ex6[best_scenario_6[0]],['Line(4)'])\n",
     "\n",
     "get_graphic(\"exercise6_best_configuration\")\n"
    ]
