--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -46,11 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import powerfactory as pf\n",
@@ -82,10 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load flow calculation class\n",
@@ -103,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -124,11 +131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "load_flow_class.Execute()"
@@ -159,12 +175,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{2: ['Trafo Substation(1)',\n",
+       "  'Trafo Substation(4)',\n",
+       "  'Trafo Substation(16)',\n",
+       "  'Trafo Substation(26)',\n",
+       "  'Trafo Substation(28)'],\n",
+       " 3: ['Trafo Substation(3)',\n",
+       "  'Trafo Substation(7)',\n",
+       "  'Trafo Substation(11)',\n",
+       "  'Trafo Substation(21)',\n",
+       "  'Trafo Substation(27)',\n",
+       "  'Trafo Substation(2)'],\n",
+       " 4: ['Trafo Substation(9)',\n",
+       "  'Trafo Substation(14)',\n",
+       "  'Trafo Substation(18)',\n",
+       "  'Trafo Substation(23)',\n",
+       "  'Trafo Substation(25)',\n",
+       "  'Trafo Substation(29)']}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "app.GetFromStudyCase('ComLdf').Execute()\n",
     "layers = {}\n",
@@ -181,11 +232,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trafo Substation(4)\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(1).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(3).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(4).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(7).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(9).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(11).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(14).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(16).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(18).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(23).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(21).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(25).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(26).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(27).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(28).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(29).ElmTrfstat</l3>\n",
+      "<l3>\\Asus.IntUser\\LabPowerFactory.IntPrj\\Network Model.IntPrjfolder\\Network Data.IntPrjfolder\\Grid.ElmNet\\Trafo Substation(2).ElmTrfstat</l3>\n"
+     ]
+    }
+   ],
    "source": [
     "print(subs[2].loc_name)\n",
     "\n",
@@ -255,11 +329,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [ 1. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0.  1. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -1. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0.  1.]\n",
+      " [-0.  1. -0. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -1.  1. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0.  1. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.  1. -1. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -1. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -1. -0. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -1. -0.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -1.\n",
+      "  -0. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -1. -0. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -1. -0. -0. -0.]\n",
+      " [-0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -1. -0.  1.]\n",
+      " [-0. -0. -0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -1. -0.]\n",
+      " [-0. -0. -0.  1. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.\n",
+      "  -0. -0. -0. -0. -1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "incidence_mat = np.identity(1 + 5 + 17) * -1\n",
@@ -330,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -347,11 +472,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## just to check if the normal \n",
     "radiality_check(feeders)[0]   "
@@ -366,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -384,11 +518,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feeded_check(subs)[0]"
    ]
@@ -402,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -435,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -490,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -519,10 +662,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -570,11 +711,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('sixthScenario', 4.088599154242873),\n",
+       "             ('firstScenario', 4.260876644839072),\n",
+       "             ('thirdScenario', 4.48409292608085),\n",
+       "             ('fourthScenario', 4.510746161018621),\n",
+       "             ('fifthScenario', 4.535880279147257),\n",
+       "             ('secondScenario', 4.572679417943618)])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "As a base scenario, we took an example provided in the ipython help notebook: ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
@@ -604,13 +759,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('sixthScenario', 4.088599154242873),\n",
+       "             ('firstScenario', 4.260876644839072),\n",
+       "             ('thirdScenario', 4.48409292608085),\n",
+       "             ('fourthScenario', 4.510746161018621),\n",
+       "             ('fifthScenario', 4.535880279147257),\n",
+       "             ('secondScenario', 4.572679417943618)])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "exercise4_results = try_scenarios(lines, scenarios_ex4)"
+    "exercise4_results = try_scenarios(lines, scenarios_ex4)\n",
+    "exercise4_results"
    ]
   },
   {
@@ -622,10 +792,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "    \n",
@@ -653,9 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for temp_time in range(24): #time range\n",
@@ -709,9 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\" Define scenarios for exercise 6:\n",
@@ -740,9 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "exercise6_results = try_scenarios(lines, scenarios_ex6,['Line(4)'])"
