--- a/3-PowerFactory/Group E Assignment 3 Report.ipynb
+++ b/3-PowerFactory/Group E Assignment 3 Report.ipynb
@@ -107,26 +107,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the supplied example configuration, we are building the instance matrix manually. Branch number is the number of the corresponding node, which has the incoming connection. For example, 1 -> 2 means, 1 connects to 2, so the branch number is 2. Size of the matrix is 1 + 5 + 17 = 23, 1 stands for the root 63 kV station, 5 for 20 kV substations, 17 for the trafo substations. \n",
-    "\n",
-    "Here, we are configuring matrix as follows: \n",
-    "1. First column is for the root node.\n",
-    "2. Next 5 columns are for the 20 kV substations.\n",
-    "3. Last 17 columns are for trafo substations.\n",
-    "\n",
-    "Example: when we are refering the first trafo substation, corresponding index is calculated as follows:\n",
-    "1(root) + 5(20 kV stations) + 1(index we want) - 1(indexing starts from 0)"
+    "<div style=\"text-align: justify\">\n",
+    "From the supplied example configuration, we are building the instance matrix manually. Branch number is the number of the corresponding node, which has the incoming connection. For example, 1 -> 2 means, 1 connects to 2, so the branch number is 2. Size of the matrix is 1 + 5 + 17 = 23, 1 stands for the root 63 kV station, 5 for 20 kV substations, 17 for the trafo substations.\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: justify\">\n",
+    "Here, we are configuring matrix as follows: \n",
+    "</div>\n",
+    "1. First column is for the root node.\n",
+    "2. Next 5 columns are for the 20 kV substations.\n",
+    "3. Last 17 columns are for trafo substations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: justify\">\n",
+    "Example: when we are refering the first trafo substation, corresponding index is calculated as follows:\n",
+    "1(root) + 5(20 kV stations) + 1(index we want) - 1(indexing starts from 0)\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: justify\">\n",
     "We can understand whether this network is radial or not by checking the rows of this matrix. If there are 2 or more 1s in a row, it means that there are 2 source nodes for the corresponding node. From this, we conclude that there are multiple paths to the same node, so the radiality is violated. Also if there is a closed loop, there has to be a 2 source nodes for a node. Only one exception to this is i.e 1(root)->2->3->1 , root node has an incoming node. In our case, this is impossible. So, whenever there is a closed loop in the network, there are at least 2 incoming nodes for one node.\n",
-    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: justify\">\n",
     "As an algorithm, we may find the row sums and if the sum is larger than 0 (1 for source node, -1 for destination node) then there are 2 incoming nodes for that node. So the maximum value for the row sums should be 0.\n",
-    "\n",
-    "However, to understand if the the case scenario a closed loop or not, one has to investigate further, since this algorithm only checks if it is radial or not, does not give a clue about closed loops."
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: justify\">\n",
+    "However, to understand if the the case scenario a closed loop or not, one has to investigate further, since this algorithm only checks if it is radial or not, does not give a clue about closed loops.\n",
+    "</div>"
    ]
   },
   {
@@ -142,7 +174,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the help of Python script we can easily extract optimal radial configuration The objective function is to minimize power losses, for the actual study time. We define possible scenarios as shown in below configuration diagrams."
+    "<div style=\"text-align: justify\">\n",
+    "With the help of Python script we can easily extract optimal radial configuration The objective function is to minimize power losses, for the actual study time. We define possible scenarios as shown in below configuration diagrams.\n",
+    "</div>"
    ]
   },
   {
@@ -161,11 +195,6 @@
     "<CENTER>\n",
     "    <img  src=\"graphics\\Exercise\\Example\\exercise5_best_configuration_time_4-2018-05-28 00.52.10.png\"/>\n",
     "<CENTER>\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "\n"
@@ -203,16 +232,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In case of a fault event or an intentional outage of an element of the grid, circuit breakers on both side of the line will interrupt until the fault is resolved or planned outage is over. Meanwhile, in the shortest possible time, the grid must be restored that could feed all transformers. In this scenario we switch line(4) off until the end of this exercise. Line(4) connects  20 kV Substation 4 with trafoSubstations 9 and 17. Hence we need to find a way around, e.g., by not disabling R8. We should also take into account line's length and its load. We took configurations from exercise 4 as a basis. "
+    "<div style=\"text-align: justify\">\n",
+    "In case of a fault event or an intentional outage of an element of the grid, circuit breakers on both side of the line will interrupt until the fault is resolved or planned outage is over. Meanwhile, in the shortest possible time, the grid must be restored that could feed all transformers. In this scenario we switch line(4) off until the end of this exercise. Line(4) connects  20 kV Substation 4 with trafoSubstations 9 and 17. Hence we need to find a way around, e.g., by not disabling R8. We should also take into account line's length and its load. We took configurations from exercise 4 as a basis. Below is the best configuration that we found:\n",
+    "</div>\n",
+    "\n",
+    "<CENTER>\n",
+    "    <img  src=\"graphics\\Exercise\\Example\\exercise6_best_configuration-2018-05-28 23.06.56-grid.png\"/>\n",
+    "<CENTER>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "</div>"
+    "<CENTER>\n",
+    "    <img  src=\"graphics\\Exercise\\Example\\exercise6_best_configuration-2018-05-28 23.06.57.png\"/>\n",
+    "<CENTER>"
    ]
   },
   {
