--- a/3-PowerFactory/PowerFactoryNB.ipynb
+++ b/3-PowerFactory/PowerFactoryNB.ipynb
@@ -161,21 +161,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print(subs[2].loc_name)\n",
-    "\n",
-    "subs[2].GetAttribute('e:pBusbar').GetAttribute('e:ciDistRoot')\n",
-    "for sub in subs:\n",
-    "    print(sub)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -309,7 +294,6 @@
    },
    "outputs": [],
    "source": [
-    "## just to check if the normal \n",
     "radiality_check(feeders)[0]   "
    ]
   },
@@ -432,7 +416,7 @@
    "source": [
     "### Switch On and Off the Lines\n",
     "\n",
-    "One should give all the lines and the lines to switch off as input, namely \"lines\" and \"scene\" respectively."
+    "One should give all the lines and the lines to switch off as input, namely \"lines\" and \"scene\" respectively. Also the broken_lines parameter is a list, which contains names of broken lines' names, which is mostly used for Exercise 6."
    ]
   },
   {
@@ -451,8 +435,7 @@
     "            line.SwitchOff()\n",
     "        \n",
     "        if line.loc_name in broken_lines:\n",
-    "            line.SwitchOff()\n",
-    "            #print(line.loc_name + \" is broken\")"
+    "            line.SwitchOff()"
    ]
   },
   {
@@ -512,7 +495,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define Scenarios"
+    "### Define Scenarios\n",
+    "\n",
+    "As a base scenario, we took an example provided in the ipython help notebook: ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
+    "\n",
+    "Then we tried to look at the grid and think which lines are substitutable without the loss of network radiality\n",
+    "and leaving any of the substations disconneted from power. E.g., in the second scenario we can turn off Line(9) but leave R(4).\n"
    ]
   },
   {
@@ -523,13 +511,6 @@
    },
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "As a base scenario, we took an example provided in the ipython help notebook: ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
-    "Then we tried to look at the grid and think which lines are substitutable without the loss of network radiality\n",
-    "and leaving any of he substations disconneted from power. E.g., in the second scenario we can turn off Line(9) but leave R(4).\n",
-    "\n",
-    "\n",
-    "\"\"\"\n",
     "scenarios_ex4 = OrderedDict()\n",
     "scenarios_ex4['firstScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
     "scenarios_ex4['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
@@ -538,7 +519,7 @@
     "scenarios_ex4['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)','R(8)']\n",
     "scenarios_ex4['sixthScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'Line(20)', 'R(6)', 'R(7)','Line(32)']\n",
     "\n",
-    "#apply them to the grid\n",
+    "#Try them with the grid\n",
     "try_scenarios(lines, scenarios_ex4)"
    ]
   },
@@ -636,11 +617,6 @@
    },
    "outputs": [],
    "source": [
-    "\"\"\" Define scenarios for exercise 6:\n",
-    "    - Line(4) connects  20 kV Substation 4 with trafoSubstations 9 and 17. \n",
-    "      Hence we need to find a way around, e.g., by not disabling R8. We should also take into account line's length and its load. \n",
-    "    - We took configurations from exercise 4 as a basis. \n",
-    "\"\"\"\n",
     "scenarios_ex6 = OrderedDict()\n",
     "scenarios_ex6['firstScenario']  = ['R(1)', 'R(2)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)']\n",
     "scenarios_ex6['secondScenario'] = ['R(1)', 'R(2)', 'R(3)', 'Line(9)', 'R(5)', 'R(6)', 'R(7)']\n",
@@ -648,7 +624,7 @@
     "scenarios_ex6['fourthScenario'] = ['R(1)', 'Line(15)', 'R(3)', 'R(4)', 'R(5)', 'R(6)', 'R(7)']\n",
     "scenarios_ex6['fifthScenario']  = ['R(1)', 'Line(15)', 'Line(35)', 'R(4)', 'R(5)', 'R(6)', 'R(7)']\n",
     "\n",
-    "#apply them to the grid\n",
+    "#Try them with the grid\n",
     "try_scenarios(lines, scenarios_ex6, ['Line(4)'])"
    ]
   },
